Make sure code blocks don't bust out of page on narrow widths

--- a/style/styles.css
+++ b/style/styles.css
@@ -56,6 +56,7 @@ li + li {
 }
 
 code {
+	white-space: pre-wrap;
 	text-transform: none;
 	font-family: Consolas, monaco, monospace;
 }
